# sdlmixtest

./: CMakeLists.txt  CMakePresets.json  example.cpp  test.mid  vcpkg.json
.github/workflows/: Windows.yml
